# pyqdpx

./: .bumpversion.cfg  .gitignore  OltasSzkepticizmus_17June.qdpx  README.md  comments.json  comments.txt  extract_comments.py  oltas.qdpx  oltas0517.qdpx  oltas_teszt.qdpx  process_comments.py  pyproject.toml  pyqdpx_notebook.ipynb  pyqdpx_write_test.py
OltasSzkepticizmus_17June/: project.qde
OltasSzkepticizmus_17June/sources/: 0a47de65-c207-4521-8a66-9a6d9ffa5f8d.docx  0a47de65-c207-4521-8a66-9a6d9ffa5f8d.txt  70a540a6-08d4-4ce3-8a60-9f29ffd2b259.docx  70a540a6-08d4-4ce3-8a60-9f29ffd2b259.txt
oltas0517/: project.qde
oltas0517/Sources/: 68bbdc14-c361-4432-b4dd-ae1dbfc12890.docx  68bbdc14-c361-4432-b4dd-ae1dbfc12890.txt  ddbebe1b-306f-4271-acdd-ae1da7c06fcd.docx  ddbebe1b-306f-4271-acdd-ae1da7c06fcd.txt  ~$bbdc14-c361-4432-b4dd-ae1dbfc12890.docx
pyqdpx/: _version.py  pyqdpx.py
tests/: test_pyqdpx.py
